[package]
name = "address-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
google_maps = "3.5.3"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
tokio-stream = "0.1.15"
