[package]
name = "address-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
futures = { version = "0.3.30", default-features = false, features = [
    "alloc",
    "std",
] }
geoutils = "0.5.1"
google_maps = { version = "3.5.3", default-features = false, features = [
    "geocoding",
    "places",
    "enable-reqwest",
    "rustls",
] }
num-traits = { version = "0.2.19", features = [] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
